# Balance_plus

./: .env  .gitignore  PROJECT_TREE.md  conftest.py  docker-compose.yml  generate_tree.py  package-lock.json  pytest.ini  requirements.txt  ruff.toml  test_runner.py
.github/scripts/: ai_reviewer.py
.github/workflows/: build-deploy-stage.yml  build-prod.yml  ci-cd.yml  lint.yml  (+3 more)
_archive/: README.md  conftest.py
backend/: pyproject.toml
backend/app/: check_drawio.py  initial_data.py  models.py  test_calculations.py  utils.py
backend/app/alembic/: env.py
backend/app/core/: db.py
backend/app/tests/crud/: conftest.py  test_crud.py
backend/archive/database/sql/: backup_v3.sql  resultcalcs.sql
backend/archive/database/xlsx/: Subject2_4parts.xlsx
db/: init.dump  restore.sh
frontend/: playwright.config.ts
services/balance-orchestrator/backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
services/balance-orchestrator/backend/app/: main.py
services/balance-orchestrator/backend/app/api/routes/: calculations.py  config.py  geometries.py  health.py  projects.py  tasks.py  user.py
services/balance-orchestrator/backend/app/core/: gitlab_adapter.py  uniconv_adapter.py
services/balance-orchestrator/backend/app/schemas/: calculation.py  geometry.py  task.py
services/balance-orchestrator/backend/tests/: README.md  conftest.py
services/balance-orchestrator/backend/tests/api/routes/: __group__.yml  test_berman_demo_calc.py  test_calculations.py  test_calculations.tavern.yaml  test_calculations_save.py  test_projects.py  test_tasks.py  test_turbines.db.yaml
services/balance-orchestrator/backend/tests/unit/: test_uniconv_adapter.py
services/condenser-calculator/backend/: README.md  pyproject.toml
services/condenser-calculator/backend/app/utils/: Constants.py  TPS_module.py  VKU_strategy.py  base_for_selection.py  berman_strategy.py  calculation_engine.py  division_range.py  exceptions_method.py  metrovickers_strategy.py  selection_methods.py  table_models.py  uniconv.py
services/condenser-calculator/backend/scripts/: _common.py  compare_selection_methods.py  generate_report_on_selecting_values.py  report_TPS_module.py  report_calculation_engine.py  report_metrovickers_strategy.py  report_module_berman.py  validate_TPS_module.py  validate_exceptions_method.py  validate_vku.py
services/condenser-calculator/backend/tests/: README.md  conftest.py
services/condenser-calculator/backend/tests/unit/: __group__.yml  test_VKU_strategy.py  test_division_range.py  test_metrovickers_strategy.py  test_module_berman.py  test_selecting_values.py  test_table_models.py  test_uniconv.py
services/condenser-calculator/backend/tests/validation/berman/: __group__.yml  conftest.py  test_mode_1.py  test_mode_2.py  test_mode_3.py  test_mode_4.py  test_verification.py
services/valve-stems/backend/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/valve-stems/backend/_archive/database/: Функциональная схема (Калькулятор штоков).graphml
services/valve-stems/backend/_archive/database/sql/: SQL-script.sql  actual_scheme.sql  backup_v5.sql  backup_v6.sql  backup_v7.sql  stocks.sql  turbines.sql
services/valve-stems/backend/_archive/database/sql/archive/: Table_Base.sql  Table_MP.sql  Table_Stock.sql
services/valve-stems/backend/_archive/database/xlsx/: BD.xlsx  Subject1_3parts.xlsx  Subject3_4parts.xlsx  Subject4_3parts.xlsx  Схема хранения данных в БД.xlsx
services/valve-stems/backend/app/: crud.py  database.py  main.py  schemas.py
services/valve-stems/backend/app/adapters/: calculation_adapter.py
services/valve-stems/backend/app/alembic/: env.py
services/valve-stems/backend/app/api/: main.py
services/valve-stems/backend/app/api/routes/: calculations.py  drawio.py  turbines.py  utils.py  valves.py
services/valve-stems/backend/app/core/: config.py  converter.py  database.py
services/valve-stems/backend/app/crud/: __init__.py  calculations.py  turbines.py  valves.py
services/valve-stems/backend/app/domain/: models.py  valve_physics_engine.py
services/valve-stems/backend/app/models/: __init__.py  calculation_result.py  project.py  turbine.py  valve.py
services/valve-stems/backend/app/schemas/: __init__.py  calculation.py  project.py  turbine.py  valve.py
services/valve-stems/backend/app/scripts/: backend_pre_start.py  check_drawio.py  initial_data.py  load_from_excel.py  tests_pre_start.py
services/valve-stems/backend/app/services/: calculator.py
services/valve-stems/backend/app/templates/: template_2_parts.xml
services/valve-stems/backend/app/tests/: conftest.py
services/valve-stems/backend/app/tests/crud/: conftest.py  test_crud.py
services/valve-stems/backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
services/valve-stems/backend/app/tests/utils/: __group__.yml  test_calculations.py  test_valve_stems_calc.py
services/valve-stems/backend/archive/database/sql/: backup_v4.sql  bacup_v3.sql  postgres_server_fullbackup.dump
services/valve-stems/backend/archive/database/sql/archive/: Table_Capacitors.sql  Table_PadsOUP.sql  database.sql
utils/: berman_strategy.py
validation_data/: 1_st_stock_result.json  3_rd_stock_data.json  README.md
ке/: dgrgr.md
(+115 files in other folders)
