[project]
name = "app"
version = "1.0.2"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.32",
    "httptools>=0.6.4",
    "uvloop>=0.20",
    "orjson>=3.9",
    "tenacity<9,>=8.2.3",
    "pydantic>2.0",
    "jinja2<4,>=3.1.4",
    "alembic<2,>=1.12.1",
    "httpx<1,>=0.25.1",
    "psycopg[binary]<4,>=3.1.13",
    "sqlmodel<1,>=0.0.21",
    "pydantic-settings<3,>=2.2.1",
    "seuif97==1.2.0",
    "wsaproperties>=0.1.4",
    "scipy",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true