[project]
name = "condenser-calculator"
version = "0.1.0"
description = "Condenser calculation service with multiple strategies"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "seuif97 (==1.2.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^6.0.0"
ruff = "^0.15.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "slow: marks tests as slow",
  "validation: marks validation tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
